# blog_fr

./: .env.example  .env.production.template  .gitignore  .gitmodules  ARCHITECTURE.md  AST_MIGRATION_PLAN.md  CACHE_REVALIDATION_GUIDE.md  DEPLOYMENT_GUIDE.md  ENV_VARIABLES_CHECKLIST.md  GIT_SYNC_GUIDE.md  LICENSE  OPTIMIZATION_SUMMARY.md  PLAN.md  README.md  SHOWCASE.md  TECH_STACK.md  debug_media.py  docker-compose.dev.yml  docker-compose.prod.local.yml  docker-compose.yml  gemini.md  package-lock.json  package.json  plan.md  question.md  test_thumbnail_naming.py
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  README.md  SLUG_REFACTOR_SUMMARY.md  cleanup_posts_docker.py  cleanup_posts_sql.py  debug_ast.py  generate_openapi.py  passwd.docker  pyproject.toml  test-report.html  test_schema_refactor.py  test_server.db  trigger_sync.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 142a5adf705f_initial_migration_with_user_and_.py  3cd0c20d5ad6_add_posts_model.py  52716b81b3bd_add_excerpt_and_is_featured_to_category.py  55695ddf5863_create_user_table.py  5e7200478855_add_use_server_rendering_field_to_posts.py  61700b9a81c4_feat_enhance_analytics_with_bot_.py  72e2441e6137_add_content_ast_field_to_posts.py  733305de1f34_add_cover_media_to_category.py  992a2681f846_add_post_sort_order_to_category.py  ad030ca670fc_apply_naming_convention_to_constraints.py  b679abbe21c0_add_server_default_to_enable_jsx.py  b782d471d884_ensure_post_is_featured_column.py  c599e7e41a25_add_analytics_geo_and_duration.py  cfef905e4e34_add_content_hash_to_media_files.py  d297b19322ca_add_posts_model.py  de58da65bff8_initial_migration_with_user_and_.py  dfbaf0720606_add_region_and_isp_to_analytics_event.py  e43f9b2a0e3f_update_user_model_add_full_name_remove_.py  f4ca5113a4c0_添加是否开启jsx或者tsx的选项.py  fdfd2915e1fd_remove_content_html_field.py
backend/app/: initial_data.py  main.py
backend/app/analytics/: PLAN.md  api_doc.py  crud.py  exceptions.py  model.py  router.py  schema.py  service.py  tag_metadata.py
backend/app/api/: test_router.py
backend/app/core/: PASSWORD_HASHING_GUIDE.md  README.md  base.py  config.py  customID.py  db.py  error_handlers.py  exceptions.py  ip2region_manager.py  monitoring.py  scheduler.py  schemas.py  security.py  tags_metadata.py
backend/app/core/config/: __init__.py  base.py  database.py  external.py  git_ops.py  media.py  monitoring.py  security.py
backend/app/core/monitoring/: __init__.py  middleware.py  otel.py  sentry.py  utils.py
backend/app/git_ops/: ARCHITECTURE.md  DEPENDENCY_INJECTION_EXPLAINED.md  README.md  SYNC_FLOW_WITH_DI.md  api_doc.py  background_tasks.py  container.py  dumper.py  error_handler.py  exceptions.py  field_definitions.py  git_client.py  mapper.py  resolvers.py  router.py  scanner.py  schema.py  service.py  tag_metadata.py  utils.py  writer.py
backend/app/git_ops/components/: COMPONENTS_GUIDE.md  __init__.py  cache.py  comparator.py  frontmatter.py  github.py  hash_manager.py  metadata.py  serializer.py  webhook.py
backend/app/git_ops/services/: README.md  __init__.py  base.py  commit_service.py  export_service.py  preview_service.py  resync_service.py  sync_service.py
backend/app/media/: __init__.py  crud.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  service.py  tag_metadata.py  utils.py
backend/app/media/cruds/: __init__.py  basic.py  query.py  stats.py
backend/app/media/routers/: access.py  (+7 more)
backend/app/middleware/: __init__.py  error_handler.py  file_upload.py  logging.py  request_id.py
backend/app/posts/: ROUTER_REFACTORING_PLAN.md  __init__.py  crud.py  custom_components.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  service.py  tag_metadata.py  utils.py  utils.py.backup
backend/app/users/: ARCHITECTURE.md  ASYNC_GUIDE.md  MODEL_VS_SCHEMA.md  README.md  __init__.py  crud.py  dependencies.py  exceptions.py  model.py  router.py  schema.py  service.py  tag_metadata.py
backend/demo/config/: config.ipynb  config_analysis.ipynb
backend/demo/db/: connect.ipynb  nplusone.ipynb
backend/demo/security/: jwt.ipynb  security.ipynb
backend/docs/: API_DOCSTRING_TEMPLATE.md  API_DOCUMENTATION_APPROACHES.md  API_DOCUMENTATION_GUIDE.md  API_DOCUMENTATION_STATUS.md  CATEGORY_ICON_ENHANCEMENT.md  DIAGRAM_RENDERING.md  GIT_AUTO_COMMIT_FIX.md  GIT_BIDIRECTIONAL_SYNC.md  MEDIA_MANAGEMENT_STRATEGY.md  MONITORING.md  ROUTER_ARCHITECTURE.md  ROUTER_REFACTORING_GUIDE.md  SCHEDULED_PUBLISHING.md  SYNC_METADATA_COMMIT_IMPLEMENTATION.md  TOC_GENERATION.md  diagram-example.html
backend/docs/tests/: 2026-01-08-post-module-fix-summary.md  POSTS_TEST_COVERAGE_REPORT.md  TEST_FIXES_AND_MISSING_FEATURES.md  TEST_FIX_SUMMARY.md  async-testing-methodology.md  event-loop-conflict-issue.md
backend/scripts/: backfill_content_ast.py  backfill_geo_data.py  download_ip2region.py  export_openapi.py  reset_admin.py  run_test_server.py  sync_git_content.py  test_markdown_it.py  test_mdx.py
backend/tests/: TEST_FAILURES_ANALYSIS.md  TEST_FIX_SUMMARY.md  conftest.py  test_config.py
backend/tests/api/: README.md  conftest.py  test_permissions.py  test_users.py
backend/tests/database/: model.py  test_crud.py  test_db_connection.py
backend/tests/middleware/: test_error_handler.py  test_file_upload.py
backend/tests/unit/: __init__.py  conftest.py  test_ast_generator.py  test_ast_html_support.py  test_content_processor_image_transform.py  test_custom_components.py  test_git_ops_comparator.py  test_git_ops_scanner.py  test_git_ops_utils.py  test_mdx.py  test_media_utils.py  test_post_cover.py  test_posts_crud_git_ops.py  test_posts_utils.py  test_posts_utils_sort.py  test_tag_deduplication.py
(+801 files in other folders)
