[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "orjson>=3.11.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
asyncio_mode = "auto"
# 关键配置：所有异步测试和 fixtures 共用同一个事件循环
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
]
