[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi-pagination>=0.15.4",
    "fastapi[standard]>=0.122.0",
    "faststream>=0.6.4",
    "latex2mathml>=3.78.1",
    "mistune>=3.1.4",
    "orjson>=3.11.4",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "scalar-fastapi>=1.5.0",
    "sqlmodel>=0.0.27",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
asyncio_mode = "auto"
# 关键配置：所有异步测试和 fixtures 共用同一个事件循环
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
    "middleware: mark test as a middleware test",
    "users: mark test as a users module test",
    "permissions: mark test as a permissions related test",
    "media: mark test as a media module test",

]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "rich>=14.2.0",
]

[tool.setuptools]
packages = ["app"]
